fix x overflow

--- a/sass/pages/_about_me.scss
+++ b/sass/pages/_about_me.scss
@@ -45,7 +45,7 @@
 @media screen and (max-width: 1500px){
     .about--flex{
         picture{
-            width: 50vw;
+            width: 45vw;
             .portrait{
                 width: 100%;
             }
